# csm-voice-cloning

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
csm_voice_api/: __init__.py
csm_voice_api/api/: __init__.py  config.py  main.py  models.py  routes.py  utils.py
csm_voice_api/core/: __init__.py  generator.py  voice_cloning.py  watermarking.py
csm_voice_api/core/models/: __init__.py
examples/: direct_api_example.py  openai_client_example.py  openai_streaming_example.py  streaming_example.py
